...
    <string name="content_desc_edit_profile_icon">Edit Profile</string>
    <string name="content_desc_add_button_icon">+</string>
    <string name="content_desc_rounded_add_photo_icon">Button for adding a photo</string>
    <string name="unknown_permission_request">Unknown permission request.</string>

    <!-- Error Messages -->
    <string name="image_size_exceeded_title">Image size exceed limit</string>
    <string name="image_size_exceeded_message">Image must be under 65536 bytes</string>
    <string name="mood_explanation_hint">Quick explanation for your mood!</string>
    <string name="map_toolbar">Mood Map</string>
    <string name="select_emotion_prompt">Select Emotion Prompt</string>
    <string name="comments">Comments</string>
    <string name="posted_by">Posted by:</string>
    <string name="date">Date:</string>
...
