...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Make all components scrollable when textExplanation gets long -->
    <!-- Editable Title at Center of Toolbar -->
    <EditText
        android:id="@+id/mood_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/transparent"
...
        android:layout_height="63dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toEndOf="@+id/add_photo_button">

        <ImageView
            android:id="@+id/confirm_button_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
...
